# platonic-universe

./: .gitignore  CLAUDE.md  Makefile  README.md  README_CKA.md  cka_mmap.cpp  compute_cka.py  generate_cka_data.py  pyproject.toml  r2_vs_params_45000galaxies_upsampled.json  reproduce_figures.sh  reproduce_full.sh  reproduce_quick.sh  setup.py  smolvlm.py
data/: percentiles.json
figs/: jwst_convnext_metrics.html  jwst_efficientsam3_metrics.html  jwst_efficientsam3_prompt_metrics.html  jwst_sam2_metrics.html
notebooks/: generate_embeddings.ipynb  generate_embeddings_astropt.ipynb  hsc_convnext_embedding.ipynb  jwst_convnext_embedding.ipynb  knn_probing.ipynb  umap_on_embeddings.ipynb  w_d_scaling.ipynb
scripts/: make_r2_csv.py  plot_crossarch_heatmap.py  plot_crossarchitectural.py  plot_crossarchitectural_ashod.py  plot_crossarchitectural_ashod_per_property.py  plot_crossarchitectural_per_property.py  plot_crossarchitectural_procrustes.py  plot_crossarchitectural_procrustes_per_property.py  plot_crossmodal.py  plot_crossmodal_ashod.py  plot_crossmodal_ashod_per_property.py  plot_crossmodal_per_property.py  plot_crossmodal_procrustes.py  plot_crossmodal_procrustes_per_property.py  plot_intramodal.py  plot_intramodal_ashod.py  plot_intramodal_ashod_per_property.py  plot_intramodal_per_property.py  plot_intramodal_procrustes.py  plot_jwst_vs_hsc_r2.py  plot_mknn_vs_r2.py  plot_mknn_vs_r2_ashod.py  plot_r2_vs_params.py  plot_r2_vs_params_ashod.py  plot_r2_vs_params_ashod_per_property.py  plot_r2_vs_params_per_property.py  run_extraction.sh  test_alignment.py  vjepa_real_slice_repro.py
src/pu/: __init__.py  (+16 more)
test2/: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  hsc_lut.json  hsc_lut_computed.json  normalization_lut.json  pyproject.toml  sample_script.py
test2/src/platonic_universe/: __init__.py
test2/src/platonic_universe/config/: __init__.py  set_cache_dir.py
test2/src/platonic_universe/datasets/: __init__.py  _registry.py  download_datasets.py
test2/src/platonic_universe/io/: __init__.py  saving.py
test2/src/platonic_universe/models/: __init__.py  _registry.py  embedders.py  loading.py
test2/src/platonic_universe/pipelines/: __init__.py  main.py
test2/src/platonic_universe/postprocessing/: __init__.py  metrics.py
test2/src/platonic_universe/preprocessing/: __init__.py  preparation.py
test2/src/platonic_universe/processing/: __init__.py  main.py
test_directory/: README.md  pyvenv.cfg  setup.py
tests/: test_alignment.py  test_linear_probe_cosmosweb_dinov3.py  test_metrics_base.py  test_metrics_cca.py  test_metrics_geometric.py  test_metrics_information.py  test_metrics_io.py  test_metrics_kernel.py  test_metrics_neighbors.py  test_metrics_regression.py  (+3 more)
(+139 files in other folders)
